--- a/package.json
+++ b/package.json
@@ -4,16 +4,14 @@
     "description": "Learning skills development",
     "author": "",
     "license": "MIT",
-    "main": "lib/index.js",
+    "main": "app.js",
     "scripts": {
-        "clean": "rimraf ./lib",
-        "copy-templates": "copyfiles --up 1 \"./src/**/*.{json,lg}\" \"./lib/src\"",
-        "prebuild": "npm run lint",
-        "build": "tsc --build && npm run copy-templates",
-        "lint": "eslint ./src/**/*.ts",
-        "lint-fix": "eslint --fix ./src/**/*.ts",
+        "clean": "rimraf ./build",
+        "copy-templates": "copyfiles --up 1 \"./src/**/*.{json,lg,png}\" \"./build/\"",
+        "build": "tsc --p tsconfig.json && npm run copy-templates",
+        "lint": "tslint -c tslint.json -p tsconfig.json 'src/**/*.ts'",
+        "lint:fix": "tslint -p tsconfig.json -c tslint.json --fix",
         "start": "npm run build && nodemon --exec ts-node src/app.ts",
-        "watch": "nodemon ./lib/index.js NODE_ENV=development",
         "test": "mocha",
         "coverage": "nyc mocha",
         "test-coverage-ci": "nyc --reporter=cobertura mocha --reporter mocha-junit-reporter"
@@ -53,6 +51,7 @@
         "nock": "^10.0.6",
         "nodemon": "^2.0.2",
         "nyc": "^14.1.1",
+        "tslint": "~6.1.3",
         "replace": "^1.0.0",
         "rimraf": "^2.6.2",
         "typescript": "^3.2.2"
