--- a/manifest/manifest-1.1.json
+++ b/manifest/manifest-1.1.json
@@ -18,7 +18,7 @@
         "name": "production",
         "protocol": "BotFrameworkV3",
         "description": "Production endpoint for the skill",
-        "endpointUrl": "http://localhost:39783/api/messages",
+        "endpointUrl": "https://va-callback-skill-develop.bdm-dev.dts-stn.com/api/messages",
         "msAppId": "646686e5-3ff4-4a7b-a574-11638fbe9b07"
       }
     ],
