--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
-    "name": "callback-skill",
+    "name": "skill",
     "version": "1.0.0",
     "description": "Learning skills development",
     "author": "",
     "license": "MIT",
-    "main": "app.js",
+    "main": "lib/index.js",
     "scripts": {
-        "clean": "rimraf ./build",
-        "copy-templates": "copyfiles --up 1 \"./src/**/*.{json,lg,png}\" \"./build/\"",
+        "clean": "rimraf ./lib",
+        "copy-templates": "copyfiles --up 1 \"./src/**/*.{json,lg}\" \"./lib\"",
+        "prebuild": "npm run lint",
         "build": "tsc --p tsconfig.json && npm run copy-templates",
-        "lint": "tslint -c tslint.json -p tsconfig.json 'src/**/*.ts'",
-        "lint:fix": "tslint -p tsconfig.json -c tslint.json --fix",
-        "start": "npm run build && nodemon --exec ts-node src/app.ts",
+        "lint": "eslint ./src/**/*.ts",
+        "lint-fix": "eslint --fix ./src/**/*.ts",
+        "start": "npm run build && node ./lib/app.js NODE_ENV=development",
+        "watch": "nodemon ./lib/index.js NODE_ENV=development",
         "test": "mocha",
         "coverage": "nyc mocha",
         "test-coverage-ci": "nyc --reporter=cobertura mocha --reporter mocha-junit-reporter"
@@ -51,7 +53,6 @@
         "nock": "^10.0.6",
         "nodemon": "^2.0.2",
         "nyc": "^14.1.1",
-        "tslint": "~6.1.3",
         "replace": "^1.0.0",
         "rimraf": "^2.6.2",
         "typescript": "^3.2.2"
